# eightfold

./: .gitignore  README.md  pyproject.toml  requirements.txt
candidate_transformer/: __init__.py  cli.py  pipeline.py
candidate_transformer/adapters/: __init__.py  ats_json_adapter.py  csv_adapter.py  github_adapter.py  notes_adapter.py  resume_adapter.py
candidate_transformer/core/: confidence.py  constants.py  experience.py  identity.py  merge.py  models.py  normalize.py
candidate_transformer/projection/: __init__.py  path.py  projector.py
candidate_transformer/validation/: __init__.py  validators.py
configs/: custom_projection.json
docs/: ASSUMPTIONS.md  REQUIREMENT_AUDIT.md
outputs/: full_candidate_output.json  publication_output.json
sample_data/: ats_candidate.json  github_api_cache.json  malformed_recruiter_export.csv  recruiter_export.csv  recruiter_notes.txt  sample_ats.json
sample_outputs/: custom_projection_output.json  default_output.json
tests/: test_normalize.py  test_pipeline.py  test_projection.py  test_resume.py  test_validation.py
