[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eightfold-candidate-transformer"
version = "0.1.0"
description = "Deterministic multi-source candidate data transformer for the Eightfold AI intern assignment."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "phonenumbers>=8.13.0",
  "python-dateutil>=2.9.0",
  "pycountry>=24.6.1",
  "pdfplumber>=0.11.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "reportlab>=4.0.0"
]

[project.scripts]
candidate-transformer = "candidate_transformer.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
